--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "performance": "^1.4.0"
+    "performance": "^1.4.0",
+    "prompt-sync": "^4.2.0"
   }
 }
